[tool.poetry]
name = "osm_mapping"
version = "0.0.0"
description = ""
authors = ["Oscar Delgado <odelgado@citibeats.com>"]
readme = "README.md"
packages = [{include = "osm_mapping"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
